# Intro_to_DB

./: MySQLServer.py  alx_book_store.sql  pyproject.toml  taask_6.sql  task_2.sql  task_4.sql  task_6.sql
