[tool.poetry]
name = "intro-to-db"
version = "0.1.0"
description = ""
authors = ["coderhanzo <bielertw@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
